--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "software/software/zmk-config"]
 	path = software/software/zmk-config
 	url = https://github.com/OGBlackDiamond/zmk-config.git
+[submodule "software/zmk-config"]
+	path = software/zmk-config
+	url = https://github.com/OGBlackDiamond/zmk-config.git
